FormFieldTile: fix selection and border in dark mode for inverted tiles
The background color of inverted tiles is the same as the standard
selection color. Therefore, darken the selection color for these tiles
in order to make text selection visible.
Fix borders for inverted tiles in dark mode.

338767

--- a/eclipse-scout-core/src/tile/fields/FormFieldTile.less
+++ b/eclipse-scout-core/src/tile/fields/FormFieldTile.less
@@ -181,6 +181,22 @@
 
     &.disabled:not(.read-only) {
       --tile-background-color: @tile-default-border-color;
+
+      & ::-moz-selection {
+        #scout.text-selection();
+      }
+
+      & ::selection {
+        #scout.text-selection();
+      }
+    }
+
+    & ::-moz-selection {
+      background: darken(@text-selection-background-color, 10);
+    }
+
+    & ::selection {
+      background: darken(@text-selection-background-color, 10);
     }
 
     & > .form-field {
@@ -289,6 +305,14 @@
 
     &.disabled:not(.read-only) {
       --tile-background-color: @tile-default-border-color;
+    }
+
+    & ::-moz-selection {
+      #scout.text-selection();
+    }
+
+    & ::selection {
+      #scout.text-selection();
     }
 
     & > .form-field {
